src/objects/AuditResult__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AuditResults</relationshipLabel>
        <relationshipName>AuditResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <label>EventId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UIControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlId</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipLabel>AuditResults</relationshipLabel>
        <relationshipName>AuditResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AuditResult</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AuditResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>